www/_sass/_base.scss
/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}



/**
 * Basic styling
 */
body {
    font-family: $base-font-family;
    font-size: $base-font-size;
    line-height: $base-line-height;
    font-weight: 300;
    color: $text-color;
    background-color: $background-color;
    -webkit-text-size-adjust: 100%;
}

body { font-size: $base-font-size - 6px; }
@media screen and (min-width: 800px)  { body{ font-size: $base-font-size - 5px; }}
@media screen and (min-width: 900px)  { body{ font-size: $base-font-size - 4px; }}
@media screen and (min-width: 1000px) { body{ font-size: $base-font-size - 3px; }}
@media screen and (min-width: 1100px) { body{ font-size: $base-font-size - 2px; }}
@media screen and (min-width: 1200px) { body{ font-size: $base-font-size - 1px; }}
@media screen and (min-width: 1300px) { body{ font-size: $base-font-size; }}



/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 2;
}



/**
 * Images
 */
img {
    max-width: 100%;
    vertical-align: middle;
}

img.left {
    float: left;
}

img.right {
    float: right;
}

img.center {
    margin: 0 auto;
    display: block;
}



/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}



/**
 * Lists
 */
ul, ol {
    margin-left: $spacing-unit;
}

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1 { font-weight: 400;
     margin-top: 3rem;
     margin-bottom: 1.5rem;
     line-height: 1; }

h2 { font-style: italic;
     font-weight: 400;
     margin-top: 2.6rem;
     margin-bottom: 1rem;
     line-height: 1; }

h3 { font-style: italic;
     font-weight: 400;
     margin-top: 2rem;
     margin-bottom: 0.5rem;
     line-height: 1; }

h4, h5, h6 { font-style: italic;
     font-weight: 400;
     margin-top: 1.9rem;
     margin-bottom: 0.5rem;
     line-height: 1; }



/**
 * Links
 */
a {
    color: $brand-color;
    text-decoration: none;

    &:visited {
        color: darken($brand-color, 15%);
    }

    &:hover {
        color: $text-color;
        text-decoration: underline;
    }
}



/**
 * Blockquotes
 */
blockquote {
    color: $grey-color;
    text-align:center;
    padding-left: $spacing-unit / 2;
    letter-spacing: -1px;
    font-style: italic;

    > :last-child {
        margin-bottom: 0;
    }
}



/**
 * Code formatting
 */
pre,
code {
    font-size: 15px;
    border: 1px solid $grey-color-light;
    border-radius: 3px;
    background-color: #eef;
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: scroll;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}



/**
 * Wrapper
 */
.wrapper {
    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    margin-right: auto;
    margin-left: auto;
    padding-right: $spacing-unit;
    padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        padding-right: $spacing-unit / 2;
        padding-left: $spacing-unit / 2;
    }
}


/**
 * Juvia
 */
.juvia-container {
    font-family: $base-font-family !important;
    font-size: $base-font-size !important;
}

/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}

.clear {
  clear: both;
  margin-bottom: 2em;
}


/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;

        path {
            fill: $grey-color;
        }
    }
}

